--- a/win32/lib/perl5/README
+++ b/win32/lib/perl5/README
@@ -1,9 +1,12 @@
+IO::Socket::SSL and related modules are provided by ralphy. You should be able to install
+them using ppm with http://ralph.irving.sdf.org/ppm4/MSWin32-x86/5.14/1400/package.xml.
+
 This folder contains CPAN modules which can't reside in our CPAN folder, as PerlApp, Wx or
 Wx::Perl::Packager won't find them unless they're in the default Perl installation folder.
 
-These modules are required to bundle WxPerl with cleanup.exe. The build script will copy them 
+These modules are required to bundle WxPerl with cleanup.exe. The build script will copy them
 to C:\Perl\site. This target folder is hardcoded in buildme.pl.
 
-WxPerl binaries for ActivePerl can be found at http://www.wxperl.co.uk/ 
+WxPerl binaries for ActivePerl can be found at http://www.wxperl.co.uk/
 
--- Michael 
+-- Michael
